added new changes

--- a/main.html
+++ b/main.html
@@ -18,11 +18,26 @@
         Please reach out to us below if you’re interested in our services. 
             We can’t wait to innovate with you!</p>
         <a href="https://sprinklelighttechnologies.fillout.com/contact-us" class="contact-btn">Contact Us</a>
-        <div class="social-icons">
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-x-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-        </div>
+        <div class="social-links">
+            <h3>Social Links</h3>
+            <ul>
+              <li>
+                <a href="https://in.linkedin.com/company/sprinklelight-technologies" target="_blank" aria-label="LinkedIn">
+                  <img src="linkedin logo.png" alt="LinkedIn">
+                </a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/sprinklelight.tech/profilecard/?igsh=MTdmODV4Z3lmaXZqNg==" target="_blank" aria-label="Instagram">
+                  <img src="insta logo.PNG" alt="Instagram">
+                </a>
+              </li>
+              <li>
+                <a href="https://www.threads.net/@sprinklelight.tech" target="_blank" aria-label="Pinterest">
+                  <img src="treads_logo.PNG" alt="Pinterest">
+                </a>
+              </li>
+            </ul>
+          </div>
         <div class="illustration">
             <img src="Right Side Image.png" alt="Website Illustration">
         </div>
