--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
         <div class="logo">
             <img src="Black Logo.png" alt="SprinkleLight Technologies Logo">
         </div>
-        <h1>Coming Soon</h1>
+        <h1>Coming soon</h1>
         <p>Tech doesn’t have to feel like a different language. 
         We’re dedicated to providing you with the best possible experience. 
         Our developers are currently working hard to upgrade our website. 
